# Rezepte

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PI.md  README.md  backup_db.sh  compile_for_nas.sh  deploy_to_pi.sh  flake.nix  opencode.json  package-lock.json  package.json  playwright.config.ts  run-story.sh  ssh_nas.sh  update_pi.sh
.agentbox/: config.txt
.cargo/: config.toml
.claude/commands/: add-story.md  complete-backlog.md  implement-story.md  plan-story.md  refine-story.md  review-story.md  rework-story.md  run-story.md
.opencode/agents/: complete-backlog.md  run-story.md
.opencode/commands/: add-story.md  complete-backlog.md  implement.md  rework.md  (+4 more)
blog/: ki-gestuetzte-entwicklung-mit-agenten-und-skills.md
d_old/: produkt_old.md
docs/: architecture.md  definition_done.md  definition_ready.md  stories_epics.md
migrations/: 001_initial.sql  002_saved_filters.sql  003_remove_rating.sql
pi/: PI.md  backup_db.sh  build.sh  deploy_to_pi.sh  update_pi.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  markdown.rs  templates.rs
templates/: base.html  heute.html  index.html  wochenvorschau.html
tests/: health_check.rs  heute.rs  recipe_category_filter.rs  recipe_combined_filters.rs  recipe_create.rs  recipe_date.rs  recipe_delete.rs  recipe_detail.rs  recipe_duplicate_check.rs  recipe_duplicates.rs  recipe_filter_collapse.rs  recipe_inline_rating.rs  recipe_list.rs  recipe_merge.rs  recipe_next_seven_days_filter.rs  recipe_not_made_filter.rs  recipe_rating.rs  recipe_rating_filter.rs  recipe_search.rs  saved_filters.rs  wochenvorschau.rs
(+221 files in other folders)
