[package]
name = "rezepte"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
askama = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "time", "migrate"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
time = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
